@@ -181,27 +181,10 @@ public class NotificationTest extends BaseTest {
         assertEquals("ideal", notificationRequestItem.getPaymentMethod());
         assertNotNull(notificationRequestItem.getAmount());
         assertEquals("EUR", notificationRequestItem.getAmount().getCurrency());
-        assertEquals(new Long(27211), notificationRequestItem.getAmount().getValue());
+        assertEquals(Long.valueOf(27211), notificationRequestItem.getAmount().getValue());
 
         assertNotNull(notificationRequestItem.getEventDate());
     }
-
-    /*@Test
-    public void testGsonAndJacksonSerializeNotificationRequest() throws JsonProcessingException {
-        NotificationRequest notificationRequest = new NotificationRequest();
-        notificationRequest.setLive("live");
-        NotificationRequestItemContainer notificationContainer = new NotificationRequestItemContainer();
-        NotificationRequestItem notificationRequestItem = new NotificationRequestItem();
-        notificationRequestItem.setAmount(new Amount());
-        notificationRequestItem.setEventCode("eventcode");
-        notificationContainer.setNotificationItem(notificationRequestItem);
-        notificationRequest.setNotificationItemContainers(Collections.singletonList(notificationContainer));
-
-        String gson = GSON.toJson(notificationRequest);
-        String jackson = OBJECT_MAPPER.writeValueAsString(notificationRequest);
-
-        assertJsonStringEquals(jackson, gson);
-    }*/
 
     private void assertJsonStringEquals(String firstInput, String secondInput) {
         JsonParser parser = new JsonParser();
